--- a/index.html
+++ b/index.html
@@ -284,12 +284,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/hth.jpg" alt="">
+              <img class="img-fluid d-block mx-auto" src="Photos/hthr.jpg" alt="">
             </a>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -308,6 +303,18 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Partners</h2>
             <h3 class="section-subheading text-muted">Connecting Businesses to customers</h3>
+            </div>
+          <div class="row">
+             <div class="col-md-3 col-sm-6">
+             <a href="#">
+              <img class="img-fluid d-block mx-auto" src="Photos/dotTech.jpg" alt="">
+             </a>
+             </div>
+           <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
+            </a>
+           </div>
           </div>
         </div>
     <section class="py-5">
