--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
             <h3 class="section-subheading text-muted">Connecting Businesses to customers</h3>
             </div>
           <div class="row">
-             <div class="col-md-3 col-sm-6">
-             <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/dotTech.jpg" alt="">
-             </a>
-             </div>
+           <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
+            </a>
+           </div>
            <div class="col-md-3 col-sm-6">
             <a href="#">
               <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
