--- a/index.html
+++ b/index.html
@@ -302,22 +302,25 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Partners</h2>
-            <h3 class="section-subheading text-muted">Connecting Businesses to customers</h3>
-            </div>
-          <div class="row">
-           <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
-            </a>
-           </div>
-           <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
-            </a>
-           </div>
+            <h3 class="section-subheading text-muted">Our Highly Valued Connections</h3>
           </div>
         </div>
     <section class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="Photos/dotTECH.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <a href="#">
+              <img class="img-fluid d-block mx-auto" src="Photos/mlh.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Contact -->
     <section id="contact">
