--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="Photos/globe.png" alt="">
+                  <img class="rounded-circle img-fluid" src="Photos/ddd.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
