--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/omicrontech/">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/company/omicrontech/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
