--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
-            <a href="#">
+            <a href="http://hackthehammer.com/">
               <img class="img-fluid d-block mx-auto" src="Photos/hthr.jpg" alt="">
             </a>
           </div>
