--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/ryanli1/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -259,7 +259,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/kevinkwshen/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
