Social Media post

--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
               <p class="text-muted">Co-founder and CEO</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://twitter.com/MrLi888">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/bob.larry.7758">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
@@ -249,12 +249,12 @@
               <p class="text-muted">Co-founder and CEO</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://twitter.com/kevinkwshen">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/kevinkwshen">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
