--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/omicrontech/">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
