--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
             <h3 class="section-subheading text-muted">For any questions, suggestions, and new ideas.</h3>
-            <h4 class="section-subheading text-muted">contact@omcn.tech</h4>
+            <h4 class="section-subheading text-muted">General: contact@omcn.tech</h4>
             <p class="text-muted">Ryan Li: liryan914@gmail.com</p>
             <p class="text-muted">Kevin Shen: kshen3778@gmail.com</p>
           </div>
