--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" media="screen" href="css/style.css">
 
+    <!--Particles-->
+    <div id="particles-js"></div>
+    
+
+    <!-- scripts --> 
+    <script src="particles.js"></script>
+    <script src="js/app.js"></script>
+
   <body id="page-top">
 
      <!-- Navigation -->
