--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">-->
 
-    <title>Omicron Sponsorship Brockerage Service</title>
+    <title>Omicron</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,17 +25,9 @@
     <!--Particles-->
     <meta charset="utf-8">
     <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-    <meta name="author" content="Vincent Garreau" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" media="screen" href="css/style.css">
 
-    <!--Particles-->
-    <div id="particles-js"></div>
-    
-
-    <!-- scripts --> 
-    <script src="particles.js"></script>
-    <script src="js/app.js"></script>
 
   <body id="page-top">
 
@@ -70,8 +62,8 @@
       <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Professional Hackathon and event Planning Services</div>
-          <div class="intro-heading text-uppercase">#Omicron.tech</div>
+          <div class="intro-lead-in">Hackathon Consulting and Sponsorship Brokerage</div>
+          <div class="intro-heading text-uppercase">Omicron</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         </div>
       </div>
@@ -96,8 +88,8 @@
               <img class="img-fluid" src="Photos/hackathon1.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Professional Hackathon Planning</h4>
-              <p class="text-muted">Plan your next hackathon with us</p>
+              <h4>Hackathon Planning</h4>
+              <p class="text-muted">We help you organize and host hackathon events by providing logistical, monetary, and marketing support.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -111,7 +103,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Sponsorship</h4>
-              <p class="text-muted">In-kinds, monetary, speakers, and lots more</p>
+              <p class="text-muted">We connect you to in-kinds sponsorship, funding, speakers, and partners.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -124,15 +116,15 @@
               <img class="img-fluid" src="Photos/confidential.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Confidential</h4>
-              <p class="text-muted">Protecting your event secrets, and delivering on time</p>
+              <h4>Corporate Events</h4>
+              <p class="text-muted">We help companies plan and host internal hackathons for their team.</p>
             </div>
           </div>
     </section>
     <section id="about">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
+            <h2 class="section-heading text-uppercase">About Us</h2>
             <h3 class="section-subheading text-muted">The Past to the Future</h3>
           </div>
         </div>
@@ -149,7 +141,7 @@
                     <h4 class="subheading">Our Humble Beginnings</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">After working on the Toronto Hacker Club team, the co-founders leveraged their connections to help connect other hackathons, and private tech events to contacts inorder to better connect the communities together.</p>
+                    <p class="text-muted">After working on the Toronto Hacker Club team, the co-founders decided to leverage their connections to connect other hackathons in the community to funding.</p>
               </li>
               <li>
                 <div class="timeline-image">
@@ -161,7 +153,7 @@
                     <h4 class="subheading">An Agency is Born</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Securing our first project, HTH, we successfully acquired a variety of monetary and in-kind sponsorship for the event.</p>
+                    <p class="text-muted">The first event we partnered with was Hack The Hammer, helping them to acquire a variety of monetary and in-kind sponsorship for the event.</p>
                   </div>
                 </div>
               </li>
@@ -172,10 +164,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>January 2018</h4>
-                    <h4 class="subheading">Transition to a new Era</h4>
+                    <h4 class="subheading">Launch and Expansion</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">The future has lots that we can do</p>
+                    <p class="text-muted">The New Year saw our official launch and marked the start of our expansion into corporate events.</p>
                   </div>
                 </div>
               </li>
@@ -222,7 +214,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Photos/ryanli.jpg" alt="">
               <h4>Ryan Li</h4>
-              <p class="text-muted">Co-founder and CEO</p>
+              <p class="text-muted">Co-Founder</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/MrLi888">
@@ -246,7 +238,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Photos/The Man The Myth The Legend.jpg" alt="">
               <h4>Kevin Shen</h4>
-              <p class="text-muted">Co-founder and CEO</p>
+              <p class="text-muted">Co-Founder</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/kevinkwshen">
@@ -275,8 +267,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Clients</h2>
-            <h3 class="section-subheading text-muted">Valued people and Our Future</h3>
+            <h2 class="section-heading text-uppercase">Our Events</h2>
+            <h3 class="section-subheading text-muted">Past Hackathons and Clients</h3>
           </div>
         </div>
     <section class="py-5">
@@ -318,10 +310,8 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">For any questions, suggestions, and new ideas.</h3>
-            <h4 class="section-subheading text-muted">General: contact@omcn.tech</h4>
-            <p class="text-muted">Ryan Li: liryan914@gmail.com</p>
-            <p class="text-muted">Kevin Shen: kshen3778@gmail.com</p>
+            <h3 class="section-subheading text-muted">Looking to host a hackathon? Get in touch with us!</h3>
+            <h4 class="section-subheading text-muted">contact@omcn.tech</h4>
           </div>
         </div>
       </div>
@@ -355,7 +345,7 @@
           </div>
         </div>
       </div>
-    </footer>  
+    </footer>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
