--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <!--title section -->
       <header class="masthead">
       <div class="container">
+        <img class="img-fluid" src="Photos/dark.png" alt="">
         <div class="intro-text">
           <div class="intro-lead-in">Hackathon Consulting and Sponsorship Brokerage</div>
           <div class="intro-heading text-uppercase">Omicron</div>
@@ -113,7 +114,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="Photos/confidential.jpg" alt="">
+              <img class="img-fluid" src="Photos/corporate.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Corporate Events</h4>
