--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <!--title section -->
       <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="Photos/dark.png" alt="">
+        <img class="img-fluid" src="Photos/dark1.png" alt="">
         <div class="intro-text">
           <div class="intro-lead-in">Hackathon Consulting and Sponsorship Brokerage</div>
           <div class="intro-heading text-uppercase">Omicron</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Tell Me More</a>
         </div>
       </div>
     </header>
