--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
+          <img class="img-fluid d-block mx-auto" src="Photos/darks.png" alt="">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
           </div>
@@ -321,6 +322,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
+        <img class="img-fluid d-block mx-auto" src="Photos/darks.png" alt="">
         <div class="row">
           <div class="col-md-4">
             <span class="copyright">Copyright Omicron 2017</span>
