--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="Photos/original.png" alt="">
+                  <img class="rounded-circle img-fluid" src="Photos/torontohc.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
