--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <p class="text-muted">Co-Founder</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://twitter.com/MrLi888">
+                  <a href="https://twitter.com/liryan914">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
