--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <body id="page-top">
 
      <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -58,11 +58,12 @@
       </div>
     </nav>
   </head>
+  
       <!--title section -->
-      <header class="masthead">
-      <div class="container">
-        <img class="img-fluid" src="Photos/dark1.png" alt="">
-        <div class="intro-text">
+      <header class="masthead" style="background-image: url('Photos/background.png')"> 
+        <div class="overlay"></div> 
+      <div class="container"> 
+           <div class="intro-text">
           <div class="intro-lead-in">Hackathon Consulting and Sponsorship Brokerage</div>
           <div class="intro-heading text-uppercase">Omicron</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Tell Me More</a>
