--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@
   <body id="page-top">
 
      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+     
+            <div class="navigation default light navbar-fixed-top hide-on-scroll">
        <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Our Services</a>
@@ -60,15 +57,16 @@
   </head>
   
       <!--title section -->
-      <header class="masthead" style="background-image: url('Photos/background.png')"> 
-        <div class="overlay"></div> 
+    <header class="masthead" style="background-image: url('Photos/background.png')"> 
+     <div class="overlay"></div> 
       <div class="container"> 
            <div class="intro-text">
           <div class="intro-lead-in">Hackathon Consulting and Sponsorship Brokerage</div>
           <div class="intro-heading text-uppercase">Omicron</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Tell Me More</a>
-        </div>
-      </div>
+          </div>
+          </div>
+     </div>
     </header>
 
     <!-- Portfolio Grid -->
