--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
   <body id="page-top">
 
      <!-- Navigation -->
-     
-            <div class="navigation default light navbar-fixed-top hide-on-scroll">
-       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
-         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+       <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+                   <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Our Services</a>
             </li>
@@ -54,9 +57,8 @@
         </div>
       </div>
     </nav>
-  </head>
-  
-      <!--title section -->
+
+  <img class="img-fluid" src="Photos/blacktopper.png" alt="">
     <header class="masthead" style="background-image: url('Photos/background.png')"> 
      <div class="overlay"></div> 
       <div class="container"> 
@@ -69,7 +71,7 @@
      </div>
     </header>
 
-    <!-- Portfolio Grid -->
+       <!-- Portfolio Grid -->
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
