--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
 
-  <img class="img-fluid" src="Photos/blacktopper.png" alt="">
+  <img class="img-fluid" src="Photos/blacktopper.png" alt=""></img>
     <header class="masthead" style="background-image: url('Photos/background.png')"> 
      <div class="overlay"></div> 
       <div class="container"> 
