--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       </div>
     </nav>
 
-  <img class="img-fluid" src="Photos/blacktopper.png" alt=""></img>
-    <header class="masthead" style="background-image: url('Photos/background.png')"> 
+    <header class="masthead" style="background-image: url('Photos/background1.png')"> 
      <div class="overlay"></div> 
       <div class="container"> 
            <div class="intro-text">
@@ -102,7 +101,7 @@
             </div>
           </div>
     </section>
-    <section id="about">
+    <section class="bg-light" section id="about">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About Us</h2>
@@ -279,7 +278,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/dotTECH.jpg" alt="">
+              <img class="img-fluid d-block mx-auto" src="Photos/.tech.png" alt="">
             </a>
           </div>
         </div>
@@ -287,7 +286,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section class="bg-light" id="team" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
