--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-           <img class="img-fluid" src="Photos/hackathon1.jpg" alt="">
+           <img class="img-fluid" src="Photos/hackathon.png" alt="">
             <div class="portfolio-caption">
               <h4>Hackathon Planning</h4>
               <p class="text-muted">We help you organize and host hackathon events by providing logistical, monetary, and marketing support.</p>
