White to Black + icons

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <a href="#">
-              <img class="img-fluid d-block mx-auto" src="Photos/.tech.png" alt="">
+              <img class="img-fluid d-block mx-auto" src="Photos/dottech.jpg" alt="">
             </a>
           </div>
         </div>
