--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
-                    <i class="fa fa-twitter"></i>
+                    <i class="https://twitter.com/OmicronContact"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
@@ -185,7 +185,7 @@
                 </li>
                 <li class="list-inline-item">
                   <a href="#">
-                    <i class="fa fa-linkedin"></i>
+                    <i class="https://www.linkedin.com/company/11442751/"></i>
                   </a>
                 </li>
               </ul>
