--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
               <p class="text-muted">Our Bot</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="https://twitter.com/OmicronContact"></i>
+                  <a href="https://twitter.com/OmicronContact">
+                    <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
@@ -184,8 +184,8 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="https://www.linkedin.com/company/11442751/"></i>
+                  <a href="https://www.linkedin.com/company/11442751/">
+                    <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
               </ul>
