--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
 
-    <header class="masthead" style="background-image: url('Photos/background1.png')"> 
+    <header class="masthead" style="background-image: url('Photos/ddm.png')"> 
      <div class="overlay"></div> 
       <div class="container"> 
            <div class="intro-text">
