--- a/Our Partners.html
+++ b/Our Partners.html
@@ -72,7 +72,7 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/hth.jpg" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/.tech.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">.tech is one of our highly valued partners that has helped provide us with our domain, and domain deals for all future hackathons! We will be partnering with them through all of our projects!</p>
