--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+              <a class="nav-link js-scroll-trigger" href="#About">About</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="Our Events.html">Our Events</a>
+              <a class="nav-link js-scroll-trigger" href="#Our Events">Our Events</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="Our Partners.html">Our Partners</a>
+              <a class="nav-link js-scroll-trigger" href="#Our Partners">Our Events</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="Contact.html">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#Contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-     <section class="page-section about-heading">
+     <section class="page-section about-heading" id="About">
       <div class="container">
         <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/hackathon.jpg" alt="">
         <div class="about-heading-content">
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-        <section class="page-section">
+      <section class="page-section" id="Our Events">>
       <div class="container">
         <div class="product-item">
           <div class="product-item-title d-flex">
@@ -149,7 +149,6 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
           <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">Lots of Future Events already lined up for the upcoming year!</p>
@@ -159,7 +158,7 @@
       </div>
     </section>
 
-       <section class="page-section">
+      <section class="page-section" id="Our Partners">
       <div class="container">
         <div class="product-item">
           <div class="product-item-title d-flex">
@@ -191,7 +190,6 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
           <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">We hope to partner with your company and help you outreach to local, provincial, and national events!</p>
@@ -201,59 +199,42 @@
       </div>
     </section>
 
-       <section class="page-section cta">
+      <section class="page-section cta" id="Contact">
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Come On In</span>
-                <span class="section-heading-lower">We're Open</span>
+                <span class="section-heading-upper">Don't Hesitate to ask for a consultation</span>
+                <span class="section-heading-lower">First one is on us!</span>
+                <span class="section-heading-upper">Contact Info</span>
+                <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Sunday
-                  <span class="ml-auto">Closed</span>
+                  General Information
+                  <span class="ml-auto">contact@omcn.tech</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Ryan Li
+                  <span class="ml-auto">liryan914@gmail.com</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Wednesday
-                  <span class="ml-auto">9:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
+                  Kevin Shen
+                  <span class="ml-auto">kshen3778@gmail.com</span>
                 </li>
               </ul>
-              <p class="address mb-5">
-                <em>
-                  <strong>1116 Orchard Street</strong>
-                  <br>
-                  Golden Valley, Minnesota
-                </em>
-              </p>
-              <p class="mb-0">
-                <small>
-                  <em>Email</em>
-                </small>
-                <br>
-                omcn.tech
-              </p>
+              <li class="list-inline-item"><img class="img-fluid" src="img/ficon.png" alt=""><img/>
+                <a href="https://www.facebook.com/omicrontech/">
+              </li>
+              <li class="list-inline-item"><img class="img-fluid" src="img/ticon.png" alt=""><img/>
+                <a href="https://twitter.com/OmicronContact">
+              </li>
+              <li class="list-inline-item"><img class="img-fluid" src="img/iicon.png" alt=""><img/>
+                <a href="https://www.instagram.com/omicronconsulting/">       
+              <li class="list-inline-item"><img class="img-fluid" src="img/licon.png" alt=""><img/>
+                <a href="https://www.linkedin.com/company/11442751/">   
+              </li>
             </div>
           </div>
         </div>
@@ -262,7 +243,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Omicron 2018</p>
       </div>
     </footer>
 
