--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">Omicron</span>
-      <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
+      <img class="img-fluid" src="img/omitest.png" alt=""></a>
       <span class="site-heading-lower">Event Planning Specialists</span>
     </h1>
 
@@ -39,7 +39,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <a> <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
+            <a> <img class="img-fluid" src="img/omitest.png" alt=""></a>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
                 <span class="sr-only">(current)</span>
@@ -224,16 +224,16 @@
                   <span class="ml-auto">kshen3778@gmail.com</span>
                 </li>
               </ul>
-              <li class="list-inline-item"><img class="img-fluid" src="img/ficon.png" alt=""><img/>
-                <a href="https://www.facebook.com/omicrontech/">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/omicrontech/"> <img class="img-fluid" src="img/ficon.png" alt=""><img/></a>
               </li>
-              <li class="list-inline-item"><img class="img-fluid" src="img/ticon.png" alt=""><img/>
-                <a href="https://twitter.com/OmicronContact">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/OmicronContact"><img class="img-fluid" src="img/ticon.png" alt=""><img/></a>
               </li>
-              <li class="list-inline-item"><img class="img-fluid" src="img/iicon.png" alt=""><img/>
-                <a href="https://www.instagram.com/omicronconsulting/">       
-              <li class="list-inline-item"><img class="img-fluid" src="img/licon.png" alt=""><img/>
-                <a href="https://www.linkedin.com/company/11442751/">   
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/omicronconsulting/"><img class="img-fluid" src="img/iicon.png" alt=""><img/></a>       
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/company/11442751/"><img class="img-fluid" src="img/licon.png" alt=""><img/></a>   
               </li>
             </div>
           </div>
