--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link js-scroll-trigger" href="#Our Events">Our Events</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link js-scroll-trigger" href="#Our Partners">Our Events</a>
+              <a class="nav-link js-scroll-trigger" href="#Our Partners">Our Partners</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link js-scroll-trigger" href="#Contact">Contact</a>
@@ -138,26 +138,6 @@
       </div>
     </section>
 
-    <section class="page-section">
-      <div class="container">
-        <div class="product-item">
-          <div class="product-item-title d-flex">
-            <div class="bg-faded p-5 d-flex mr-auto rounded">
-              <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Future Events</span>
-                <span class="section-heading-lower">Coming Soon!</span>
-              </h2>
-            </div>
-          </div>
-          <div class="product-item-description d-flex ml-auto">
-            <div class="bg-faded p-5 rounded">
-              <p class="mb-0">Lots of Future Events already lined up for the upcoming year!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
       <section class="page-section" id="Our Partners">
       <div class="container">
         <div class="product-item">
@@ -173,26 +153,6 @@
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">.tech is one of our highly valued partners that has helped provide us with our domain, and domain deals for all future hackathons! We will be partnering with them through all of our projects!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="page-section">
-      <div class="container">
-        <div class="product-item">
-          <div class="product-item-title d-flex">
-            <div class="bg-faded p-5 d-flex mr-auto rounded">
-              <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Future Partners</span>
-                <span class="section-heading-lower">Coming Soon!</span>
-              </h2>
-            </div>
-          </div>
-          <div class="product-item-description d-flex ml-auto">
-            <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We hope to partner with your company and help you outreach to local, provincial, and national events!</p>
             </div>
           </div>
         </div>
@@ -232,7 +192,6 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Omicron 2018</p>
           <li class="list-inline-item">
             <a href="https://www.facebook.com/omicrontech/"> <img class="img-fluid" src="img/ficon.png" alt=""><img/></a>
           </li>
@@ -245,6 +204,7 @@
           <li class="list-inline-item">
             <a href="https://www.linkedin.com/company/11442751/"><img class="img-fluid" src="img/licon.png" alt=""><img/></a>   
           </li>
+                <p class="m-0 small">Copyright &copy; Omicron 2018</p>
       </div>
     </footer>
 
